--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "babel-core": "^7.0.0-beta.3",
+    "babel-eslint": "^8.1.2",
+    "eslint": "^4.14.0",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "expo": "^23.0.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
